--- a/composer.json
+++ b/composer.json
@@ -37,11 +37,8 @@
     "roots/bedrock-autoloader": "^1.0",
     "roots/bedrock-disallow-indexing": "^2.0",
     "roots/wordpress": "^6.0",
-    "roots/wp-password-bcrypt": "1.0.0",
     "symfony/http-foundation": "^6.1",
     "symfony/cache": "^6.1",
-    "illuminate/view": "^9.14",
-    "laravel/helpers": "^1.5",
     "ext-mysqli": "*",
     "symfony/asset": "^6.1",
     "symfony/finder": "^6.1",
@@ -91,7 +88,6 @@
     "symfony/var-dumper": "^6.1",
     "phpunit/phpunit": "^9.5",
     "rector/rector": "^0.12",
-    "friendsofphp/php-cs-fixer": "^3.8",
     "phpstan/phpstan": "^1.7",
     "symfony/debug-bundle": "^6.1",
     "symfony/stopwatch": "^6.1",
@@ -99,7 +95,16 @@
     "symfony/maker-bundle": "^1.0",
     "symfony/browser-kit": "^6.1",
     "symfony/css-selector": "^6.1",
-    "symfony/phpunit-bridge": "^6.1"
+    "symfony/phpunit-bridge": "^6.1",
+    "phpstan/extension-installer": "^1.1",
+    "phpstan/phpstan-symfony": "^1.2",
+    "phpstan/phpstan-doctrine": "^1.3",
+    "phpstan/phpstan-phpunit": "^1.1",
+    "vimeo/psalm": "^4.24",
+    "psalm/plugin-symfony": "^3.1",
+    "weirdan/doctrine-psalm-plugin": "^2.3",
+    "szepeviktor/phpstan-wordpress": "^1.1",
+    "friendsofphp/php-cs-fixer": "^3.10"
   },
   "config": {
     "optimize-autoloader": true,
@@ -110,7 +115,8 @@
     "allow-plugins": {
       "composer/installers": true,
       "roots/wordpress-core-installer": true,
-      "symfony/flex": true
+      "symfony/flex": true,
+      "phpstan/extension-installer": true
     }
   },
   "minimum-stability": "dev",
@@ -131,6 +137,7 @@
   },
   "scripts": {
     "test": [
+      "",
       "php-cs-fixer fix --dry-run",
       "phpstan analyze",
       "phpunit"
