--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "blacktrs/modern-wp",
   "type": "project",
   "license": "MIT",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Symfony based WordPress boilerplate with modern development tools, easier configuration, and an improved folder structure",
   "homepage": "https://github.com/blacktrs/modern-wp",
   "support": {
@@ -36,75 +36,74 @@
     "composer/installers": "^1.12",
     "roots/bedrock-autoloader": "^1.0",
     "roots/bedrock-disallow-indexing": "^2.0",
-    "roots/wordpress": "^6.0",
-    "symfony/http-foundation": "^6.1",
-    "symfony/cache": "^6.1",
+    "roots/wordpress": "^6.3",
+    "symfony/http-foundation": "^6.3",
+    "symfony/cache": "^6.3",
     "ext-mysqli": "*",
-    "symfony/asset": "^6.1",
-    "symfony/finder": "^6.1",
-    "symfony/config": "^6.1",
-    "symfony/routing": "^6.1",
-    "symfony/dependency-injection": "^6.1",
-    "symfony/dotenv": "^6.1",
-    "symfony/yaml": "^6.1",
-    "symfony/console": "^6.1",
-    "symfony/http-kernel": "^6.1",
-    "symfony/framework-bundle": "^6.1",
+    "symfony/asset": "^6.3",
+    "symfony/finder": "^6.3",
+    "symfony/config": "^6.3",
+    "symfony/routing": "^6.3",
+    "symfony/dependency-injection": "^6.3",
+    "symfony/dotenv": "^6.3",
+    "symfony/yaml": "^6.3",
+    "symfony/console": "^6.3",
+    "symfony/http-kernel": "^6.3",
+    "symfony/framework-bundle": "^6.3",
     "symfony/monolog-bundle": "^3.8",
     "symfony/flex": "^2.2",
     "doctrine/doctrine-bundle": "^2.7",
     "doctrine/doctrine-migrations-bundle": "^3.2",
     "doctrine/orm": "^2.12",
-    "symfony/proxy-manager-bridge": "^6.1",
-    "sensio/framework-extra-bundle": "^6.1",
-    "symfony/doctrine-messenger": "^6.1",
-    "symfony/expression-language": "^6.1",
-    "symfony/form": "^6.1",
-    "symfony/http-client": "^6.1",
-    "symfony/intl": "^6.1",
-    "symfony/mailer": "^6.1",
-    "symfony/mime": "^6.1",
-    "symfony/notifier": "^6.1",
-    "symfony/process": "^6.1",
-    "symfony/security-bundle": "^6.1",
-    "doctrine/annotations": "^1.0",
+    "symfony/proxy-manager-bridge": "^6.3",
+    "symfony/doctrine-messenger": "^6.3",
+    "symfony/expression-language": "^6.3",
+    "symfony/form": "^6.3",
+    "symfony/http-client": "^6.3",
+    "symfony/intl": "^6.3",
+    "symfony/mailer": "^6.3",
+    "symfony/mime": "^6.3",
+    "symfony/notifier": "^6.3",
+    "symfony/process": "^6.3",
+    "symfony/security-bundle": "^6.3",
+    "doctrine/annotations": "^2.0",
     "phpdocumentor/reflection-docblock": "^5.3",
-    "phpstan/phpdoc-parser": "^1.6",
-    "symfony/property-access": "^6.1",
-    "symfony/property-info": "^6.1",
-    "symfony/serializer": "^6.1",
-    "symfony/string": "^6.1",
-    "symfony/translation": "^6.1",
-    "symfony/twig-bundle": "^6.1",
+    "phpstan/phpdoc-parser": "^1.23",
+    "symfony/property-access": "^6.3",
+    "symfony/property-info": "^6.3",
+    "symfony/serializer": "^6.3",
+    "symfony/string": "^6.3",
+    "symfony/translation": "^6.3",
+    "symfony/twig-bundle": "^6.3",
     "twig/extra-bundle": "^2.12|^3.0",
     "twig/twig": "^2.12|^3.0",
-    "symfony/validator": "^6.1",
-    "symfony/web-link": "^6.1",
-    "symfony/webpack-encore-bundle": "^1.15",
-    "blacktrs/symfony-wp-bundle": "^1.0"
+    "symfony/validator": "^6.3",
+    "symfony/web-link": "^6.3",
+    "symfony/webpack-encore-bundle": "^1.17",
+    "blacktrs/symfony-wp-bundle": "^1.1"
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest",
-    "symfony/var-dumper": "^6.1",
-    "phpunit/phpunit": "^9.5",
+    "symfony/var-dumper": "^6.3",
+    "phpunit/phpunit": "^10",
     "rector/rector": "^0.12",
-    "phpstan/phpstan": "^1.7",
-    "symfony/debug-bundle": "^6.1",
-    "symfony/stopwatch": "^6.1",
-    "symfony/web-profiler-bundle": "^6.1",
-    "symfony/maker-bundle": "^1.0",
-    "symfony/browser-kit": "^6.1",
-    "symfony/css-selector": "^6.1",
-    "symfony/phpunit-bridge": "^6.1",
+    "phpstan/phpstan": "^1.10",
+    "symfony/debug-bundle": "^6.3",
+    "symfony/stopwatch": "^6.3",
+    "symfony/web-profiler-bundle": "^6.3",
+    "symfony/maker-bundle": "^1.50",
+    "symfony/browser-kit": "^6.3",
+    "symfony/css-selector": "^6.3",
+    "symfony/phpunit-bridge": "^6.3",
     "phpstan/extension-installer": "^1.1",
     "phpstan/phpstan-symfony": "^1.2",
     "phpstan/phpstan-doctrine": "^1.3",
     "phpstan/phpstan-phpunit": "^1.1",
-    "vimeo/psalm": "^4.24",
-    "psalm/plugin-symfony": "^3.1",
-    "weirdan/doctrine-psalm-plugin": "^2.3",
-    "szepeviktor/phpstan-wordpress": "^1.1",
-    "friendsofphp/php-cs-fixer": "^3.10"
+    "vimeo/psalm": "^5.15",
+    "psalm/plugin-symfony": "^5.0",
+    "weirdan/doctrine-psalm-plugin": "^2.9",
+    "szepeviktor/phpstan-wordpress": "^1.3",
+    "friendsofphp/php-cs-fixer": "^3.23"
   },
   "config": {
     "optimize-autoloader": true,
@@ -137,15 +136,18 @@
   },
   "scripts": {
     "test": [
-      "",
       "php-cs-fixer fix --dry-run",
       "phpstan analyze",
+      "psalm",
       "phpunit"
     ],
     "auto-scripts": {
       "cache:clear": "symfony-cmd",
-      "assets:install %PUBLIC_DIR%": "symfony-cmd",
-      "modernwp:salts:generate": "symfony-cmd"
-    }
+      "assets:install %PUBLIC_DIR%": "symfony-cmd"
+    },
+    "post-install-cmd": [
+      "php -r \"copy('.env', '.env.local');\"",
+      "bin/console modernwp:salts:generate"
+    ]
   }
 }
