--- a/docker-compose.dist.yml
+++ b/docker-compose.dist.yml
@@ -35,6 +35,6 @@ services:
     working_dir: /app
     volumes:
       - '.:/app:rw'
-      - './docker/php-fpm/php-ini-overrides.ini:/etc/php/8.1/fpm/conf.d/99-overrides.ini'
+      - './docker/php-fpm/php-ini-overrides.ini:/usr/local/etc/php/conf.d/99-overrides.ini'
     depends_on:
       - database
